<resources>
    <string name="app_name">AutoSelfDiagnosis</string>
    <string name="step_permission">권한 설정</string>
    <string name="step_set_school">학교 설정</string>
    <string name="step_set_adv_info">세부 정보 설정</string>
    <string name="step_set_time">시간 설정</string>
    <string name="action_previous_step">이전</string>
    <string name="action_next_step">다음</string>

    <string name="allow_permission">권한 허용</string>

    <string name="school_name_title">학교명</string>
    <string name="enter_school_name">학교 이름을 입력하세요…</string>
    <string name="search_school">학교 검색</string>
    <string name="reset_school">재설정</string>

    <string name="title_name">이름</string>
    <string name="title_birthday">생년월일 ex)031022</string>
    <string name="title_password">비밀번호</string>

    <string name="menu_home">홈</string>
    <string name="menu_settings">설정</string>
    <string name="menu_info">정보</string>

    <!-- Preference Titles -->
    <string name="general_header">일반</string>
    <string name="info_header">정보 변경</string>

    <!-- General Preferences -->
    <string name="general_power_title">자동 자가진단</string>
    <string name="general_power_summary_on">매일 주중 설정한 시간에 자동으로 자가진단을 실행합니다.</string>
    <string name="general_power_summary_off">자동 자가진단을 비활성화합니다.</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>