<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_stepper"
    app:startDestination="@id/step_1_dest">

    <fragment
        android:id="@+id/step_1_dest"
        android:name="dev.mooner.autoselfdiagnosis.ui.steps.PermissionsFragment"
        android:label="@string/step_permission"
        tools:layout="@layout/fragment_permissions" />

    <fragment
        android:id="@+id/step_2_dest"
        android:name="dev.mooner.autoselfdiagnosis.ui.steps.SetSchoolFragment"
        android:label="@string/step_set_school"
        tools:layout="@layout/fragment_set_school" />

    <fragment
        android:id="@+id/step_3_dest"
        android:name="dev.mooner.autoselfdiagnosis.ui.steps.AdvInfoFragment"
        android:label="@string/step_set_school"
        tools:layout="@layout/fragment_adv_info" />

    <fragment
        android:id="@+id/step_4_dest"
        android:name="dev.mooner.autoselfdiagnosis.ui.steps.SetTimeFragment"
        android:label="@string/step_set_time"
        tools:layout="@layout/fragment_set_time" />
</navigation>