<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.steps.SetSchoolFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/button_bottom_margin"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layoutSearchSchool"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginTop="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:backgroundTint="#00FFFFFF" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/kind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:backgroundTint="#00FFFFFF" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:layout_marginBottom="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/schoolName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/modulus_nightbeach_bold"
                        android:hint="@string/school_name_title" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/selectedSchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:fontFamily="@font/modulus_nightbeach_bold"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonResetSchool"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/card_margin"
                    android:background="@drawable/round"
                    android:backgroundTint="@color/color_primary"
                    android:fontFamily="@font/modulus_nightbeach_bold"
                    android:text="@string/reset_school"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonSearchSchool"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:background="@drawable/round"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/modulus_nightbeach_bold"
            android:text="@string/search_school"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>